<resources>
    <string name="app_name">Home Page</string>
    <string name="text1">Welcome to Flash Delivery</string>
    <string name="text2">"Reliable and Felxible Delivery"</string>
    <string name="text3">"Delivery Fast and Safe</string>
    <string name="text4">Trust Us</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="forget_your_pasword">Forget your pasword?</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login">Login</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="des_login">for login</string>
    <string name="not_a_member">Not a member?</string>
    <string name="logo">logo</string>
</resources>
