<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jc348271.myapplication.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/appBarLayout"
        android:layout_gravity="center"
        android:layout_marginTop="21dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/UserID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/user_id"
            android:textColor="#B22222" />

        <EditText
            android:id="@+id/InputID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:ems="8"
            android:background="#8B0000"
            android:textColor="#B22222"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="#B22222" />

        <EditText
            android:id="@+id/InputPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="8"
            android:layout_marginTop="5dp"
            android:textColor="#B22222"
            android:background="#8B0000"
            android:inputType="textVisiblePassword" />
        <TextView
            android:id="@+id/ForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/forget_your_pasword"
            android:textColor="#0000FF" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:text="@string/login"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="#E00000"
            android:textColor="#ffff"/>
        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/not_a_member"
            android:textColor="#0000FF" />
        <TextView
            android:id="@+id/signUp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up_now"
            android:textColor="#0000FF" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp"
        android:background="clear"
        app:srcCompat="?android:attr/actionModeCloseDrawable"
        android:contentDescription="@string/des_login" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/backButton"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textSize="25sp"
        android:textStyle="bold" />


</RelativeLayout>
